# atproto-labelwatch

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DOC_FILE_NAMES.md  Dockerfile  LICENSE  LICENSE-MIT  NEXT.md  NON_GOALS.md  PROVENANCE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
config/: config.example.toml  config.toml.example
deploy/: README.md  labelwatch-api.service  labelwatch-discovery.service  labelwatch.nginx.conf  labelwatch.service
docs/: BOUNDARY_PHASE2_SPEC.md  HARDENING.md  HOSTING-LOCUS-DATA-CONTRACT.md  KNOWN_GAPS.md  MILESTONE_BOUNDARY_INSTABILITY.md  MILESTONE_MY_LABEL_CLIMATE.md  OPS_HAZARDS.md  SILENCE_ADJUDICATOR_V0.md  TEMPORAL_RATIO_SPEC.md  authority-failure-modes.md  evaluation-detachment-axes.md  labelers-as-testimony.md  observation-export-custody.md  retired-reference-labelers.md
scripts/: checkin.sh  data_fix_t003_labeler_class.sql  deploy.sh  labeler-timeline.sh  probe-labeler.sh
specs/: README.md
tests/: test_alert_budget.py  test_authority_inventory.py  test_authority_posture.py  test_authority_review_promote.py  test_authority_triage.py  test_behavior_summary.py  test_boundary.py  test_churn.py  test_classify.py  test_climate.py  test_concentration.py  test_coverage.py  test_cursor_persistence.py  test_db_schema.py  test_derive.py  test_derive_facts.py  test_discovery.py  test_discovery_stream.py  test_findings.py  test_frontdoor.py  test_git_sha.py  test_hosting.py  test_index_audit.py  test_load_probe.py  test_multi_ingest.py  test_my_label_climate.py  test_posting.py  test_provenance.py  test_publication.py  (+17 more)
(+207 files in other folders)
